formatted the code and updated swagger
